# zaprett

./: .gitignore  .gitmodules  README.md  build-module.sh  changelog.md  customize.sh  hosts  module.prop  update-hosts.json  update-tv.json  update.json  update_extended.json  update_hosts.json  update_tv.json  zaprett
.github/workflows/: blank.yml  workflow.yml  workflow_without_post.yml
hosts/: hosts
rust/: CMakeLists.txt  Cargo.toml  build.rs  justfile  remove_os_check.patch
rust/crates/libnfqws/: CMakeLists.txt  Cargo.toml  build.rs  nfqws.map
rust/crates/libnfqws/src/: lib.rs
rust/crates/libnfqws2/: CMakeLists.txt  Cargo.toml  build.rs  nfqws2.map
rust/crates/libnfqws2/src/: lib.rs
rust/crates/zaprett/: Cargo.toml  build.rs
rust/crates/zaprett/src/: autostart.rs  cli.rs  commands.rs  config.rs  daemon.rs  iptables_rust.rs  lib.rs  main.rs  path.rs  service.rs  strategy.rs
rust/crates/zaprett/src/cli/: commands.rs
rust/src/: libnfqws.rs  main.rs
src/: customize.sh  service.sh
src/zaprett/manifests/lists/include/: list-discord.json  list-youtube.json
