[package]
name = "zaprett"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
iptables = "0.6.0"
libc = "0.2.177"
procfs = "0.18.0"
regex = "1.12.2"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysctl = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"

[build-dependencies]
cc = "1.2.43"
once_cell = "1.21.3"
glob = "0.3.3"